@@ -1,3 +1,10 @@
+2006-03-20  David Reveman  <davidr@novell.com>
+
+	* hw/xgl/glxext/xglglxext.c: Update for rendering to FBOs. Adjust
+	clipping and draw/read offsets when FBO is bound. Lookup texture and
+	renderbuffer objects when attaching. Fix
+	GetFramebufferAttachmentParameterivEXT.
+
 2006-03-15  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/glxext/xglglxlog.c:
